k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
    name: splittery
---
apiVersion: v1
kind: Namespace
metadata:
    name: powersync
