k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: splittery
spec:
    replicas: 1
    selector:
        matchLabels:
            app: backend
    template:
        metadata:
            labels:
                app: backend
        spec:
            containers:
                - name: splittery-backend
                  image: philippderroole/splittery-backend:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8000
