k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
    name: backend-service
    namespace: splittery
spec:
    selector:
        app: backend
    ports:
        - protocol: TCP
          port: 8000
          targetPort: 8000
