k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
    name: frontend-service
    namespace: splittery
spec:
    selector:
        app: frontend
    ports:
        - protocol: TCP
          port: 3000
          targetPort: 3000
