k8s/mongo.yaml
apiVersion: v1
kind: Service
metadata:
    name: mongo
    namespace: powersync
spec:
    selector:
        app: mongo
    ports:
        - name: mongo
          port: 27017
          targetPort: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: mongo
    namespace: powersync
spec:
    serviceName: mongo
    replicas: 1
    selector:
        matchLabels:
            app: mongo
    template:
        metadata:
            labels:
                app: mongo
        spec:
            containers:
                - name: mongo
                  image: mongo:7.0
                  args:
                      - --replSet
                      - rs0
                      - --bind_ip_all
                      - --quiet
                  ports:
                      - containerPort: 27017
                        name: mongo
                  volumeMounts:
                      - name: mongo-storage
                        mountPath: /data/db
    volumeClaimTemplates:
        - metadata:
              name: mongo-storage
          spec:
              accessModes:
                  - ReadWriteOnce
              resources:
                  requests:
                      storage: 5Gi
