k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress
    namespace: splittery
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-production
        kubernetes.io/ingress.class: traefik
spec:
    rules:
        - host: splittery.de
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend-service
                            port:
                                number: 3000
                  - path: /api/v1/
                    pathType: Prefix
                    backend:
                        service:
                            name: backend-service
                            port:
                                number: 8000
    tls:
        - hosts:
              - splittery.de
          secretName: splittery-tls
